--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^0.13.4
   json_annotation: ^4.4.0
   cupertino_icons: ^1.0.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
